<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/body_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/glass_card_body_height"
        android:layout_marginLeft="@dimen/glass_card_margin"
        android:layout_marginRight="@dimen/glass_card_margin"
        android:layout_marginTop="@dimen/glass_card_margin"
        tools:ignore="UselessLeaf" >

        <!-- Put your widgets inside this RelativeLayout. -->

        <LinearLayout
            android:id="@+id/col1_layout"
            android:layout_width="560px"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15px"
                android:src="@drawable/yellow" />

            <TextView
                android:id="@+id/cov_row1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/which_row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#808080"
                android:text="@string/min" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/col2_layout"
            android:layout_width="560px"
            android:layout_height="wrap_content"
            android:layout_below="@id/col1_layout"
            android:layout_marginTop="20px"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15px"
                android:src="@drawable/red" />

            <TextView
                android:id="@+id/cov_row2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/which_row2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#808080"
                android:text="@string/current"  />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/col3_layout"
            android:layout_width="560px"
            android:layout_height="wrap_content"
            android:layout_below="@id/col2_layout"
            android:layout_marginTop="20px"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15px"
                android:src="@drawable/green" />

            <TextView
                android:id="@+id/cov_row3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/which_row3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#808080"
                android:text="@string/max"  />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/footer_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_marginBottom="@dimen/glass_card_footer_margin"
        android:layout_marginLeft="@dimen/glass_card_margin"
        android:layout_marginRight="@dimen/glass_card_margin"
        android:orientation="horizontal" >

        <!--
             The footer view will grow to fit as much content as possible while the
             timestamp view keeps a fixed width. If the footer text is too long, it
             will be ellipsized with a 40px margin between it and the timestamp.
        -->

        <TextView
            android:id="@+id/footer"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/cov"/>

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/glass_card_margin"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/time_stamp"  />
    </LinearLayout>

</FrameLayout>